force-app/main/default/objects/SystemMessages__mdt/SystemMessages__mdt.object-meta.xml
<CustomObject>
    <description>Metadata to maintain all the validation and error messages in the system</description>
    <label>System Messages</label>
    <pluralLabel>System Messages</pluralLabel>
</CustomObject>