force-app/main/default/objects/SystemMessages__mdt/fields/LongMessage__c.field-meta.xml
<CustomField>
    <fullName>LongMessage__c</fullName>
    <label>LongMessage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>