force-app/main/default/objects/SystemMessages__mdt/fields/MergeFieldsToReplace__c.field-meta.xml
<CustomField>
    <fullName>MergeFieldsToReplace__c</fullName>
    <description>To add the merge field that&apos;s need to replace inside apex.</description>
    <label>Merge Fields To Replace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>