force-app/main/default/objects/SystemMessages__mdt/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <inlineHelpText>Message to be shown to the user</inlineHelpText>
    <label>Message</label>
    <type>TextArea</type>
</CustomField>